# nwb-lens

./: .gitignore  pyproject.toml
docs/: nwb-explorer-spec.md
src/nwb_lens/: __init__.py  app.py  cli.py
src/nwb_lens/inspector/: __init__.py  manager.py  runner.py
src/nwb_lens/structure/: __init__.py  extractor.py  json_converter.py  merger.py  models.py
src/nwb_lens/ui/: __init__.py  basic.tcss  panels.py  tree.py
